pipeline files/Route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: customer-service
  name: customer-service
  namespace: demo
spec:
  host: customer-service-demo.apps.192.168.10.37.nip.io
  port:
    targetPort: 8080-tcp
  to:
    kind: Service
    name: customer-service
    weight: 100
  wildcardPolicy: None
